--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <style>
 :root{
 --azul:#0047AB;--naranja:#FF8C00;--verde:#25D366;
---fondo:#f0f2f5;--card:#fff;--txt:#333;--mut:#777;--b:#ddd
+--fondo:#f0f2f5;--card:#fff;--txt:#333;--mut:#777;--b:#ddd;--rojo:#c62828
 }
 [data-theme=dark]{
 --fondo:#121212;--card:#1e1e1e;--txt:#eee;--mut:#aaa;--b:#333;--azul:#4c8cff
@@ -24,23 +24,26 @@ h1{margin:0;color:var(--azul)}
 .cat{padding:8px 14px;border:none;border-radius:20px;font-weight:600;background:var(--b);cursor:pointer;white-space:nowrap}
 .cat.active{background:var(--azul);color:white}
 .feed{display:grid;grid-template-columns:1fr 1fr;gap:12px;padding:12px;max-width:900px;margin:auto}
-.card{background:var(--card);border-radius:12px;border:1px solid var(--b);overflow:hidden;display:flex;flex-direction:column;transition: 0.3s}
+.card{background:var(--card);border-radius:12px;border:1px solid var(--b);overflow:hidden;display:flex;flex-direction:column;transition: 0.3s;position:relative}
 .foto{height:180px;width:100%;object-fit:cover;background:#eee}
 .info{padding:12px;display:flex;flex-direction:column;gap:5px;flex:1}
 .tag-row{display:flex;gap:5px;flex-wrap:wrap}
 .tag{font-size:10px;border:1px solid var(--azul);color:var(--azul);padding:2px 8px;border-radius:6px}
 .tag-estado{background:var(--azul);color:white}
+.tag-vendido{background:var(--rojo);color:white;border-color:var(--rojo)}
 .titulo{font-weight:600;font-size:16px;margin-top:5px}
 .precio{color:var(--naranja);font-size:20px;font-weight:700}
 .desc{font-size:12px;color:var(--txt);display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
 .mut{font-size:11px;color:var(--mut)}
 .btn-wa{margin-top:auto;background:var(--verde);color:white;text-decoration:none;text-align:center;padding:10px;border-radius:8px;font-weight:600}
-.btn-del{background:transparent;color:#c62828;border:none;padding:5px;font-size:11px;cursor:pointer;text-decoration:underline;margin-top:5px}
+.btn-del{background:transparent;color:var(--rojo);border:none;padding:5px;font-size:11px;cursor:pointer;text-decoration:underline;margin-top:5px}
+.btn-sold{background:var(--txt);color:var(--card);border:none;padding:8px;border-radius:8px;font-size:11px;cursor:pointer;font-weight:bold}
 .btn-add{position:fixed;bottom:20px;right:20px;width:65px;height:65px;border-radius:50%;background:var(--naranja);color:white;font-size:32px;border:none;box-shadow: 0 4px 10px rgba(0,0,0,0.3);z-index:10}
 #modal, #modalPerfil{position:fixed;inset:0;background:rgba(0,0,0,0.8);display:none;z-index:99;overflow-y:auto;padding:20px}
 .modal-content{background:var(--card);max-width:500px;margin:auto;padding:20px;border-radius:15px;display:flex;flex-direction:column;gap:12px}
 input,select,textarea{padding:12px;border-radius:8px;border:1px solid var(--b);background:var(--fondo);color:var(--txt);font-family:inherit}
 textarea{resize:none;height:80px}
+.sold-overlay{position:absolute;top:10px;right:10px;background:var(--rojo);color:white;padding:4px 10px;border-radius:4px;font-weight:bold;font-size:12px;z-index:1}
 </style>
 </head>
 
@@ -110,7 +113,7 @@ textarea{resize:none;height:80px}
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, query, orderBy } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, query, orderBy, updateDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
 const firebaseConfig = {
 apiKey:"AIzaSyD-QOvro2aOC8GpPfnQWkBxZCWIR3lypdI",
@@ -130,7 +133,6 @@ if(!localStorage.getItem("mi_id_usuario")) {
 }
 const MI_ID = localStorage.getItem("mi_id_usuario");
 
-// Cargar datos de perfil guardados
 const obtenerPerfil = () => ({
     nombre: localStorage.getItem("perfil_nombre") || "Vendedor Anónimo",
     telefono: localStorage.getItem("perfil_telefono") || "77771234"
@@ -154,7 +156,6 @@ window.guardarPerfil = () => {
     alert("Perfil actualizado correctamente");
     cerrarPerfil();
 };
-// -----------------------
 
 const svData = {
 "Ahuachapán": ["Ahuachapán", "Jujutla", "Atiquizaya", "Concepción de Ataco", "El Refugio", "Guaymango", "Apaneca", "San Francisco Menéndez", "San Lorenzo", "San Pedro Puxtla", "Turín"],
@@ -221,7 +222,8 @@ window.publicar = async () => {
         vendedor: perfil.nombre,
         telefono: perfil.telefono,
         creado: Date.now(),
-        duenoId: MI_ID
+        duenoId: MI_ID,
+        vendido: false
     });
     
     titulo.value = ""; descripcion.value = ""; precio.value = ""; fotoUrl.value = "";
@@ -232,6 +234,13 @@ window.publicar = async () => {
 window.eliminar = async id => {
     if(confirm("¿Eliminar este anuncio permanentemente?")){
         await deleteDoc(doc(db,"productos",id));
+        cargar();
+    }
+};
+
+window.marcarVendido = async id => {
+    if(confirm("¿Marcar este producto como vendido? Ya no se podrá contactar.")){
+        await updateDoc(doc(db,"productos",id), { vendido: true });
         cargar();
     }
 };
@@ -262,26 +271,37 @@ async function cargar(){
 function render(lista){
     feed.innerHTML="";
     lista.forEach(p=>{
-        const botonEliminar = (p.duenoId === MI_ID) 
-            ? `<button class="btn-del" onclick="eliminar('${p.id}')">Eliminar mi anuncio</button>` 
-            : '';
+        const esDueno = p.duenoId === MI_ID;
+        const estaVendido = p.vendido === true;
+
+        let botonesPrivados = "";
+        if(esDueno){
+            botonesPrivados = `
+                <div style="display:flex;gap:10px;margin-top:5px">
+                    ${!estaVendido ? `<button class="btn-sold" onclick="marcarVendido('${p.id}')">Marcar Vendido</button>` : ''}
+                    <button class="btn-del" onclick="eliminar('${p.id}')">Eliminar</button>
+                </div>`;
+        }
+
+        const botonContacto = estaVendido 
+            ? `<div style="text-align:center;color:var(--rojo);font-weight:bold;padding:10px;border:1px solid var(--rojo);border-radius:8px">NO DISPONIBLE</div>`
+            : `<a class="btn-wa" target="_blank" href="https://wa.me/503${p.telefono}?text=Hola! Me interesa el producto: ${p.titulo} ($${p.precio}) que vi en CheroMarket.">Contactar</a>`;
 
         feed.innerHTML+=`
         <div class="card" data-t="${p.titulo.toLowerCase()}" data-l="${p.muni.toLowerCase()}" data-c="${p.categoria}">
-            <img class="foto" src="${p.foto}" alt="producto">
+            ${estaVendido ? '<div class="sold-overlay">VENDIDO</div>' : ''}
+            <img class="foto" src="${p.foto}" alt="producto" style="${estaVendido ? 'filter:grayscale(1);opacity:0.6' : ''}">
             <div class="info">
                 <div class="tag-row">
                     <span class="tag">${p.categoria}</span>
-                    <span class="tag tag-estado">${p.estado}</span>
+                    <span class="tag tag-estado ${estaVendido ? 'tag-vendido' : ''}">${estaVendido ? 'Vendido' : p.estado}</span>
                 </div>
                 <div class="titulo">${p.titulo}</div>
                 <div class="precio">$${p.precio}</div>
                 <div class="desc">${p.descripcion}</div>
                 <div class="mut">📍 ${p.muni}, ${p.depto} <br>👤 ${p.vendedor}</div>
-                <a class="btn-wa" target="_blank"
-                href="https://wa.me/503${p.telefono}?text=Hola! Me interesa el producto: ${p.titulo} ($${p.precio}) que vi en CheroMarket.">
-                Contactar</a>
-                ${botonEliminar}
+                ${botonContacto}
+                ${botonesPrivados}
             </div>
         </div>`;
     });
